# calification_program

./: .gitignore  CMakeLists.txt  README.md
meta_data/: rubric.txt  template_rubric.txt
meta_data/lab02/lab_text_files/: twitchdataTP.txt
meta_data/lab03/: rubric.txt  template_rubric.txt
meta_data/lab03/lab_text_files/: Canales.txt  Etiquetas.txt  ReproduccionesDeEtiquetas.txt
meta_data/lab05/: rubric.txt  template_rubric.txt
meta_data/lab06/: rubric.txt  template_rubric.txt
meta_data/lab08/: rubric.txt  template_rubric.txt
meta_data/lab09/: rubric.txt
scripts/: 1-delete_tildes.ps1  2-change_folder_name.ps1  3-create_rubrics.ps1  4-unzip_projects.ps1  5-extract_rubrics.ps1
src/: main.cpp
src/headers/: Criterion.hpp  Deduction.hpp  Item.hpp  Observation.hpp  Rubric.hpp  read_functions.hpp  utils.hpp
src/implementation/: Criterion.cpp  Deduction.cpp  Item.cpp  Observation.cpp  Rubric.cpp  read_functions.cpp
